--- a/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.html
+++ b/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.html
@@ -9,12 +9,15 @@
         <span [ngStyle]="{ color: '#F6C434' }">Kadiatou Tall</span><br />
         Gerer vos projets en toute simplicité
       </h3>
-     
+     <img src="/gestionnnairedashboard.png" alt="image">
     </div>
     <div id="contributions">
       <div>
-        <h4 class="sous-titre">Contributions à valider</h4>
+        <span class="titre">
+          <h4 class="sous-titre">Contributions à valider</h4>
         <button class="tous-voir">Tous voir</button>
+        </span>
+        
       </div>
       <div id="statistiques">
         <h5>Projets</h5>
@@ -22,8 +25,11 @@
       </div>
     </div>
     <div id="projet-recent">
+      <span class="titre">
         <h4 class="sous-titre">Projets récents</h4>
         <button class="tous-voir">Tous voir</button>
+      </span>
+        
     </div>
     <div id="demande-contribution">
         <h4 class="sous-titre">Démandes de contribution</h4>
