creation du side bar

--- a/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.html
+++ b/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.html
@@ -21,7 +21,22 @@
       </div>
       <div id="statistiques">
         <h5>Projets</h5>
-        <h2>5</h2>
+          <p [ngStyle]="{'display':'flex', 'flex-direction':'column'}">
+           <span id="en-cours"> 5</span><br>
+            En cours
+          </p>
+          <p>
+            <span [ngStyle]="{'margin-top':'2px'}">
+                  10  
+             <hr id="realise">
+            Réalisés
+            </span>
+          </p>
+            
+          
+          
+           
+          
       </div>
     </div>
     <div id="projet-recent">
