--- a/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.css
+++ b/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.css
@@ -3,11 +3,7 @@
     flex-direction: row;
     font-family: Inter;
 }
-#lateral-nav{
-    width: 25%;
-    border: 1px solid black;
-    margin-right: 2.5%;
-}
+
 .sous-titre{
     color:#334DAA;
 }
@@ -22,12 +18,12 @@
     background-color: #334DAA;
     border-radius: 17px;
     width: 100%;
-    height: 100px;
+    height: 14vw;
     color: white;
     display: flex;
     flex-direction: row;
     font-weight: bold;
-    font-size: 1em;
+    font-size: 1.5em;
     align-items: center;
     box-sizing: border-box;
     border: 0.1px solid white;
@@ -51,6 +47,7 @@
     flex-direction: row;
     align-content: space-evenly;
     margin-top: 5%;
+    
 }
 #contributions div{
     background-color: white;
@@ -66,6 +63,21 @@
 }
 #statistiques{
     width: 25%;
+}
+#statistiques{
+    text-align: center;
+}
+#statistiques h5{
+    text-align: right;
+}
+#en-cours{
+    font-weight: bold;
+    font-size: 4em;
+}
+#realise{
+    width: 80%;
+    color:#E9E0E0;
+    height: 0px;
 }
 #contributions div:nth-last-child{
     width: 25%;
@@ -85,6 +97,8 @@
  border-bottom: 1px solid #E9E0E0;
  padding: 0 1.5rem;
  box-sizing: border-box;
+  box-shadow:  0 5px 10px rgba(0,0,0,0.2), 
+              0 -5px 10px rgba(0,0,0,0.2); 
 }
 .tous-voir{
     width: 9em;
@@ -97,4 +111,6 @@
 #demande-contribution{
     display: flex;
     justify-content: center;
+    background-color: white;
+   margin-top: 5%;
 }
