feat: ajout des modifications suplémentaires

--- a/src/app/components/UI/side-bar/side-bar.component.css
+++ b/src/app/components/UI/side-bar/side-bar.component.css
@@ -9,7 +9,7 @@
 .sidebar{
     width: 180px;
     height: calc(100vh - 100px);
-    position: absolute;
+    position: fixed;
     top: 62px;
     background-color: white;
     gap: 80px;
@@ -70,7 +70,7 @@ p {
     display: flex;
     align-items: center;
     gap: 08px;
-    
+
 }
 
 /* Élément de navigation 6 - Déconnexion */
@@ -105,19 +105,19 @@ p {
 
 /* Styles pour l'état replié - Section haute */
 .sidebar.replié .haut {
-    margin: 0 0 0 10px; 
+    margin: 0 0 0 10px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 08px; 
+    gap: 08px;
 }
 
 /* Styles pour l'état replié - Section basse */
 .sidebar.replié .enbas {
-    margin: 310px 0 6px 10px; 
+    margin: 310px 0 6px 10px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start; 
+    align-items: flex-start;
     gap: 08px;
 }
 
@@ -128,7 +128,7 @@ p {
 .sidebar.replié .nav4,
 .sidebar.replié .nav5,
 .sidebar.replié .nav6 {
-    justify-content: flex-start; 
-    gap: 08px; 
+    justify-content: flex-start;
+    gap: 08px;
     margin: 6px 0 0 0;
 }
