--- a/src/app/components/profil-contributeur/profil-contributeur.component.css
+++ b/src/app/components/profil-contributeur/profil-contributeur.component.css
@@ -32,7 +32,7 @@ app-side-bar {
 
 /* Bandeau supérieur */
 .profile-banner {
-  background-color: #547aa2;
+  background-color: #334daa;
   color: white;
   padding: 30px;
   border-radius: 10px;
@@ -40,7 +40,7 @@ app-side-bar {
   align-items: center;
   gap: 20px;
   margin-bottom: 30px;
-  margin-top: 50px;
+  margin-top: 5px;
   height: 2%;
 }
 
