--- a/src/app/components/page-visiteur/page-visiteur.component.css
+++ b/src/app/components/page-visiteur/page-visiteur.component.css
@@ -38,7 +38,7 @@
     flex-direction: column;    
     height: 100%;
     overflow-y: auto;
-    /* position: fixed; */
+    gap: 10px;
 }
 .recherche{
     display: flex;
@@ -117,19 +117,19 @@ input:focus{
 }
 .ideeprojet{
     width: 290px;
-    background-color: antiquewhite;
+    background-color: #F4F4F4;
     height: 200px;
     border-radius: 10px;
     padding-left: 20px;
 }
 .commentaireideeprojet{
     width: 230px;
-    background-color: rgb(139, 98, 44);
     height: 200px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     gap: 5px;
+    padding: 5px;
 }
 .entête{
     width: 230px;
@@ -139,9 +139,11 @@ input:focus{
 .commentaire{
      width: 230px;
     height: 55px;
-    background-color:cadetblue;
+    background-color:#F4F4F4;
     display: flex;
     flex-direction: column;
+    border-radius: 10px;
+    padding: 3px;
    
 }
 
@@ -154,7 +156,7 @@ input:focus{
     display: flex;
     width: 230px;
     height: 20px;
-   
+  
 }
 .contenu{
      width: 230px;
