--- a/src/app/components/profil-contributeur/profil-contributeur.component.html
+++ b/src/app/components/profil-contributeur/profil-contributeur.component.html
@@ -1,5 +1,5 @@
 <div class="main-layout">
-  <app-header></app-header>
+  <app-header-profil></app-header-profil>
 
   <div class="layout-body">
     <app-side-bar></app-side-bar>
