--- a/src/app/components/porteurProjet/liste-idee-projet/liste-idee-projet.component.html
+++ b/src/app/components/porteurProjet/liste-idee-projet/liste-idee-projet.component.html
@@ -1,1 +1,72 @@
-<p>liste-idee-projet works!</p>
+<app-side-bar></app-side-bar>
+
+
+
+<div class="header">
+  <h1><i class="ri-lightbulb-line"></i>Donner vie à vos idée, Collaborez en toute Securité</h1>
+</div>
+
+<div class="main">
+  <div>
+    <div class="container">
+      <div class="card">
+        <div class="card-content">
+          <div class="title-section">
+            <h2>Nianaboli</h2>
+            <div class="tag">Collaboration</div>
+          </div>
+          <p class="description">
+            Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager
+          </p>
+          <div class="publie-voirplus">
+            <div class="publie">Publié : 03/08/2025</div>
+            <a href="#" class="voirPlus">Voir plus <i class="ri-arrow-right-line"></i></a>
+          </div>
+          <div class="lign"></div>
+          <div class="card-footer">
+            <div class="user-info">
+              <img src="" alt="User photo">
+              <span>Niakale Diakité</span>
+            </div>
+            <div class="footer-icons">
+              <span><i class="ri-message-2-line"></i>8</span>
+              <span><i class="ri-heart-3-fill"></i> 235</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <div>
+      <div class="container">
+        <div class="card">
+          <div class="card-content">
+            <div class="title-section">
+              <h2>Nianaboli</h2>
+              <div class="tag">Collaboration</div>
+            </div>
+            <p class="description">
+              Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager
+            </p>
+            <div class="publie-voirplus">
+              <div class="publie">Publié : 03/08/2025</div>
+              <a href="#" class="voirPlus">Voir plus <i class="ri-arrow-right-line"></i></a>
+            </div>
+            <div class="lign"></div>
+            <div class="card-footer">
+              <div class="user-info">
+                <img src="" alt="User photo">
+                <span>Niakale Diakité</span>
+              </div>
+              <div class="footer-icons">
+                <span><i class="ri-message-2-line"></i>8</span>
+                <span><i class="ri-heart-3-fill"></i> 235</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
