features: dashboard, ajout d'un pop-ups ok

--- a/src/app/components/UI/pop-ups/pop-ups.component.html
+++ b/src/app/components/UI/pop-ups/pop-ups.component.html
@@ -7,7 +7,7 @@
         <span>Je confirme avoir compris</span>
       </label>
   
-      <button (click)="fermerPopup()">Fermer</button>
+      <button (click)="fermerPopups()">Fermer</button>
     </div>
   </div>
   
