--- a/src/app/components/porteurProjet/liste-idee-projet/liste-idee-projet.component.css
+++ b/src/app/components/porteurProjet/liste-idee-projet/liste-idee-projet.component.css
@@ -6,21 +6,30 @@ body {
 
 .main{
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  
-  gap: 20px;
+ flex-wrap: wrap;
+ margin-top: 50px;
+ 
+}
+.layout {
+  display: flex;
+  min-height: 100vh;
+}
+app-side-bar {
+  width: 250px; /* ou 200px si tu préfères */
+  flex-shrink: 0;
 }
 /* Header principal */
-.header {
-  text-align: center;
-  padding: 30px 20px;
- 
-  color: black;
+.main header {
+  flex-grow: 1;
+  padding: 20px;
 }
-
+.ri-lightbulb-line{
+  color: #f1b800;
+  font-size: 2em;
+}
 .header h1 {
-  font-size: 1.5em;
+  font-size: 2em;
   margin: 0;
 }
 
