--- a/src/app/components/porteurProjet/liste-idee-projet/liste-idee-projet.component.html
+++ b/src/app/components/porteurProjet/liste-idee-projet/liste-idee-projet.component.html
@@ -1,13 +1,9 @@
-<app-side-bar></app-side-bar>
+<div class="layout">
 
-
-
-<div class="header">
-  <h1><i class="ri-lightbulb-line"></i>Donner vie à vos idée, Collaborez en toute Securité</h1>
-</div>
+  <app-side-bar></app-side-bar>
 
 <div class="main">
-  <div>
+     <h1 class="header"><i class="ri-lightbulb-line"></i>Donner vie à vos idée, Collaborez en toute Securité</h1> 
     <div class="container">
       <div class="card">
         <div class="card-content">
@@ -22,10 +18,9 @@
             <div class="publie">Publié : 03/08/2025</div>
             <a href="#" class="voirPlus">Voir plus <i class="ri-arrow-right-line"></i></a>
           </div>
-          <div class="lign"></div>
           <div class="card-footer">
             <div class="user-info">
-              <img src="" alt="User photo">
+              <img src="logoS.png" alt="User photo">
               <span>Niakale Diakité</span>
             </div>
             <div class="footer-icons">
@@ -36,37 +31,148 @@
         </div>
       </div>
     </div>
-  </div>
 
-    <div>
-      <div class="container">
-        <div class="card">
-          <div class="card-content">
-            <div class="title-section">
-              <h2>Nianaboli</h2>
-              <div class="tag">Collaboration</div>
+    <div class="container">
+      <div class="card">
+        <div class="card-content">
+          <div class="title-section">
+            <h2>Nianaboli</h2>
+            <div class="tag">Collaboration</div>
+          </div>
+          <p class="description">
+            Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager
+          </p>
+          <div class="publie-voirplus">
+            <div class="publie">Publié : 03/08/2025</div>
+            <a href="#" class="voirPlus">Voir plus <i class="ri-arrow-right-line"></i></a>
+          </div>
+          <div class="card-footer">
+            <div class="user-info">
+              <img src="logoS.png" alt="User photo">
+              <span>Niakale Diakité</span>
             </div>
-            <p class="description">
-              Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager
-            </p>
-            <div class="publie-voirplus">
-              <div class="publie">Publié : 03/08/2025</div>
-              <a href="#" class="voirPlus">Voir plus <i class="ri-arrow-right-line"></i></a>
-            </div>
-            <div class="lign"></div>
-            <div class="card-footer">
-              <div class="user-info">
-                <img src="" alt="User photo">
-                <span>Niakale Diakité</span>
-              </div>
-              <div class="footer-icons">
-                <span><i class="ri-message-2-line"></i>8</span>
-                <span><i class="ri-heart-3-fill"></i> 235</span>
-              </div>
+            <div class="footer-icons">
+              <span><i class="ri-message-2-line"></i>8</span>
+              <span><i class="ri-heart-3-fill"></i> 235</span>
             </div>
           </div>
         </div>
-
       </div>
-
     </div>
+
+    <div class="container">
+      <div class="card">
+        <div class="card-content">
+          <div class="title-section">
+            <h2>Nianaboli</h2>
+            <div class="tag">Collaboration</div>
+          </div>
+          <p class="description">
+            Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager
+          </p>
+          <div class="publie-voirplus">
+            <div class="publie">Publié : 03/08/2025</div>
+            <a href="#" class="voirPlus">Voir plus <i class="ri-arrow-right-line"></i></a>
+          </div>
+          <div class="card-footer">
+            <div class="user-info">
+              <img src="logoS.png" alt="User photo">
+              <span>Niakale Diakité</span>
+            </div>
+            <div class="footer-icons">
+              <span><i class="ri-message-2-line"></i>8</span>
+              <span><i class="ri-heart-3-fill"></i> 235</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="card">
+        <div class="card-content">
+          <div class="title-section">
+            <h2>Nianaboli</h2>
+            <div class="tag">Collaboration</div>
+          </div>
+          <p class="description">
+            Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager
+          </p>
+          <div class="publie-voirplus">
+            <div class="publie">Publié : 03/08/2025</div>
+            <a href="#" class="voirPlus">Voir plus <i class="ri-arrow-right-line"></i></a>
+          </div>
+          <div class="card-footer">
+            <div class="user-info">
+              <img src="logoS.png" alt="User photo">
+              <span>Niakale Diakité</span>
+            </div>
+            <div class="footer-icons">
+              <span><i class="ri-message-2-line"></i>8</span>
+              <span><i class="ri-heart-3-fill"></i> 235</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="card">
+        <div class="card-content">
+          <div class="title-section">
+            <h2>Nianaboli</h2>
+            <div class="tag">Collaboration</div>
+          </div>
+          <p class="description">
+            Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager
+          </p>
+          <div class="publie-voirplus">
+            <div class="publie">Publié : 03/08/2025</div>
+            <a href="#" class="voirPlus">Voir plus <i class="ri-arrow-right-line"></i></a>
+          </div>
+          <div class="card-footer">
+            <div class="user-info">
+              <img src="logoS.png" alt="User photo">
+              <span>Niakale Diakité</span>
+            </div>
+            <div class="footer-icons">
+              <span><i class="ri-message-2-line"></i>8</span>
+              <span><i class="ri-heart-3-fill"></i> 235</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="card">
+        <div class="card-content">
+          <div class="title-section">
+            <h2>Nianaboli</h2>
+            <div class="tag">Collaboration</div>
+          </div>
+          <p class="description">
+            Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager
+          </p>
+          <div class="publie-voirplus">
+            <div class="publie">Publié : 03/08/2025</div>
+            <a href="#" class="voirPlus">Voir plus <i class="ri-arrow-right-line"></i></a>
+          </div>
+          <div class="card-footer">
+            <div class="user-info">
+              <img src="image 40.png" alt="User photo">
+              <span>Niakale Diakité</span>
+            </div>
+            <div class="footer-icons">
+              <span><i class="ri-message-2-line"></i>8</span>
+              <span><i class="ri-heart-3-fill"></i> 235</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+ </div>
+
+   
+
+   
