--- a/src/app/components/task-form/task-form.component.html
+++ b/src/app/components/task-form/task-form.component.html
@@ -1,5 +1,4 @@
 <app-header></app-header>
-<app-side-bar></app-side-bar>
 <app-footer></app-footer>
 <div class="main-content">
   <div class="team-header">
@@ -49,7 +48,7 @@
 
     <button type="submit">Attribuer la tâche</button>
     <button type="button" class="btn-taches" (click)="voirToutesTaches()">
-      <img src="assets/list-icon.svg" alt="Liste" style="height: 1.2rem; margin-right: 0.5rem;" />
+      <img src="icone-de-dossier-symbole-png-bleu.png" alt="Liste" style="height: 1.2rem; margin-right: 0.5rem;" />
       Voir toutes mes tâches
     </button>
   </form>
