--- a/src/app/components/task-list/task-list.component.css
+++ b/src/app/components/task-list/task-list.component.css
@@ -20,6 +20,7 @@
   flex-direction: column;
   gap: 20px;
   min-height: 100vh;
+  margin: 0 75px; /* Espace pour la barre latérale */
 }
 
 /* En-tête */
@@ -60,7 +61,7 @@
 }
 
 .new-task-btn:hover {
-  background-color: #9ccaf8;
+  background-color: #04afafef;
 }
 
 /* Cartes de résumé */
